# realsenseplugin

./: CMakeLists.txt  README.md  config.doxy  realsensepluginConfig.cmake.in
deprecated/sofa/realsenseplugin/projector/: RealSenseAbstractProjector_old.h  RealSenseDeprojector_old.cpp  RealSenseDeprojector_old.h  RealSenseDistFrame.h  RealSenseMaskDeprojector_old.cpp  RealSenseMaskDeprojector_old.h  RealSensePointDeprojector_old.cpp  RealSensePointDeprojector_old.h
doc/html/: _multi_cam_calibrator_8h_source.html  _multi_cam_live_calibrator_8h_source.html  _real_sense_abstract_projector_8h.html  _real_sense_abstract_projector_8h__dep__incl.map  _real_sense_abstract_projector_8h__dep__incl.md5  _real_sense_abstract_projector_8h__incl.map  _real_sense_abstract_projector_8h__incl.md5  _real_sense_abstract_projector_8h_source.html  _real_sense_calibrator_8cpp.html  _real_sense_calibrator_8cpp__incl.map  _real_sense_calibrator_8cpp__incl.md5  _real_sense_calibrator_8h.html  _real_sense_calibrator_8h__dep__incl.map  _real_sense_calibrator_8h__dep__incl.md5  _real_sense_calibrator_8h__incl.map  _real_sense_calibrator_8h__incl.md5  _real_sense_calibrator_8h_source.html  _real_sense_cam_8cpp.html  _real_sense_cam_8cpp__incl.map  _real_sense_cam_8cpp__incl.md5  _real_sense_cam_8h.html  _real_sense_cam_8h__dep__incl.map  _real_sense_cam_8h__dep__incl.md5  _real_sense_cam_8h__incl.map  _real_sense_cam_8h__incl.md5  _real_sense_cam_8h_source.html  _real_sense_deprojector_8cpp.html  _real_sense_deprojector_8cpp__incl.map  _real_sense_deprojector_8cpp__incl.md5  _real_sense_deprojector_8h.html  _real_sense_deprojector_8h__dep__incl.map  _real_sense_deprojector_8h__dep__incl.md5  _real_sense_deprojector_8h__incl.map  _real_sense_deprojector_8h__incl.md5  _real_sense_deprojector_8h_source.html  _real_sense_dist_frame_8cpp.html  _real_sense_dist_frame_8cpp__incl.map  _real_sense_dist_frame_8cpp__incl.md5  _real_sense_dist_frame_8h.html  _real_sense_dist_frame_8h__dep__incl.map  (+187 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  (+14 more)
doc/latex/: _real_sense_abstract_projector_8h.tex  _real_sense_abstract_projector_8h__dep__incl.md5  _real_sense_abstract_projector_8h__incl.md5  _real_sense_calibrator_8cpp.tex  _real_sense_calibrator_8cpp__incl.md5  _real_sense_calibrator_8h.tex  _real_sense_calibrator_8h__dep__incl.md5  _real_sense_calibrator_8h__incl.md5  _real_sense_cam_8cpp.tex  _real_sense_cam_8cpp__incl.md5  _real_sense_cam_8h.tex  _real_sense_cam_8h__dep__incl.md5  _real_sense_cam_8h__incl.md5  _real_sense_deprojector_8cpp.tex  _real_sense_deprojector_8cpp__incl.md5  _real_sense_deprojector_8h.tex  _real_sense_deprojector_8h__dep__incl.md5  _real_sense_deprojector_8h__incl.md5  _real_sense_dist_frame_8cpp.tex  _real_sense_dist_frame_8cpp__incl.md5  _real_sense_dist_frame_8h.tex  _real_sense_dist_frame_8h__dep__incl.md5  _real_sense_dist_frame_8h__incl.md5  _real_sense_grab_cut_8cpp.tex  _real_sense_grab_cut_8cpp__incl.md5  _real_sense_grab_cut_8h.tex  _real_sense_grab_cut_8h__dep__incl.md5  _real_sense_grab_cut_8h__incl.md5  _real_sense_mask_deprojector_8cpp.tex  _real_sense_mask_deprojector_8cpp__incl.md5  _real_sense_mask_deprojector_8h.tex  _real_sense_mask_deprojector_8h__dep__incl.md5  _real_sense_mask_deprojector_8h__incl.md5  _real_sense_multi_cam_8cpp.tex  _real_sense_multi_cam_8cpp__incl.md5  _real_sense_multi_cam_8h.tex  _real_sense_multi_cam_8h__dep__incl.md5  _real_sense_multi_cam_8h__incl.md5  _real_sense_point_deprojector_8cpp.tex  _real_sense_point_deprojector_8cpp__incl.md5  (+74 more)
scenes/: README  realsenseCam.scn
scenes/calib/: multicam_deprojector.scn  reprojector.scn  rsnewCalib.scn
scenes/full_app/: reprojector.scn  trackMarkersOnPhantom-surface.scn
scenes/full_app/data/: genmesh.scn  liver10.vtu  markers_registered_scaled.mtl  marlin_medima40_153.ris  out_liver.vtu  out_parenchyma.mtl  out_parenchyma.vtu  out_tumor1.vtu  out_tumor2.vtu  parenchyma_10000_smooth (1).stl  parenchyma_20000_smooth.stl  parenchyma_80000.stl  parenchyma_scaled.mtl  tumor1.stl  tumor2.stl  tumor2_registered_scaled.mtl
scenes/full_app/data/meshes/: biliary_duct_scaled_centered.mtl  liver00.vtu  liver000.vtu  markers_registered_scaled.mtl  tumor1_registered_scaled.mtl  tumor2_registered_scaled.mtl
scenes/generators/: acquire_pcd_and_rigidly_register.py  python_acquire_and_register.py  scriptcalib.py  scriptmono.py  scriptmono2.py  scriptmonooffline.py
src/: RealSenseCalibrator.cpp  RealSenseCalibrator.h  RealSenseCam.h  RealSenseDeprojector.h  RealSenseDistFrame.cpp  RealSenseDistFrame.h  RealSenseFakeCam.cpp  RealSenseGrabCut.cpp  RealSenseGrabCut.h  RealSenseMultiCam.cpp  RealSenseMultiCam.h  RealSensePointDeprojector.cpp  RealSensePointDeprojector.h  RealSenseStreamer.cpp  RealSenseStreamer.h  cv-helpers.hpp  initPlugin.cpp
src/sofa/realsenseplugin/: ImageData2RealSenseDataFrame.cpp  ImageData2RealSenseDataFrame.h  RSData.cpp  RSData.h  RSGui.cpp  RSGui.h  initPlugin.cpp
src/sofa/realsenseplugin/calib/: MultiCamCalibrator.cpp  MultiCamCalibrator.h  MultiCamLiveCalibrator.cpp  MultiCamLiveCalibrator.h  ProjectionMatrixIO.cpp  ProjectionMatrixIO.h
src/sofa/realsenseplugin/conect/: SwapNodes.cpp  SwapNodes.h  SwapNodes.inl
src/sofa/realsenseplugin/projector/: RealSenseAbstractProjector.h  RealSenseDeprojector.cpp  RealSenseDeprojector.h  RealSenseDistFrame.cpp  RealSenseDistFrame.h  RealSenseMaskDeprojector.cpp  RealSenseMaskDeprojector.h  RealSensePointDeprojector.cpp  RealSensePointDeprojector.h
src/sofa/realsenseplugin/streamer/: RealSenseCam.cpp  RealSenseCam.h  RealSenseExporter.cpp  RealSenseExporter.h  (+8 more)
(+19 files in other folders)
